--- a/src/app/dashboard/element/element.component.scss
+++ b/src/app/dashboard/element/element.component.scss
@@ -5,6 +5,8 @@
   color: rgba(0, 0, 0, 0.87);
   cursor: move;
   display: flex;
+  flex-direction: column;
+  gap: 30px;
   justify-content: center;
   align-items: center;
   text-align: center;
